--- a/index.ipynb
+++ b/index.ipynb
@@ -130,7 +130,7 @@
     "%matplotlib inline\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
-    "plx\n",
+    "plt.\n",
     "\n",
     "plt.scatter(weight, mpg)\n",
     "\n",
