--- a/index.ipynb
+++ b/index.ipynb
@@ -132,6 +132,7 @@
     "plt.figure(figsize=(8,6))\n",
     "plt.xlabel('Weight')\n",
     "plt.ylabel('MPG')\n",
+    "plt.title('MPG vs. ')\n",
     "\n",
     "plt.scatter(weight, mpg)\n",
     "\n",
