--- a/index.ipynb
+++ b/index.ipynb
@@ -179,6 +179,16 @@
    "source": [
     "x = None\n",
     "\n",
+    "\n",
+    "plt.figure(figsize=(8,6))\n",
+    "plt.xlabel('Weight')\n",
+    "plt.ylabel('MPG')\n",
+    "plt.title('MPG vs. Car Weight')\n",
+    "\n",
+    "plt.scatter(weight, mpg)\n",
+    "\n",
+    "plt.show()\n",
+    "\n",
     "#Plot the distogram with hist() function\n",
     "\n",
     "# Label, give title and show the plot\n"
