--- a/index.ipynb
+++ b/index.ipynb
@@ -181,8 +181,8 @@
     "\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
-    "plt.xlabel('Weight')\n",
-    "plt.ylabel('MPG')\n",
+    "plt.xlabel('Wait time (min)')\n",
+    "plt.ylabel('')\n",
     "plt.title('MPG vs. Car Weight')\n",
     "\n",
     "plt.scatter(weight, mpg)\n",
