--- a/index.ipynb
+++ b/index.ipynb
@@ -182,8 +182,8 @@
     "\n",
     "plt.figure(figsize=(8,6))\n",
     "plt.xlabel('Wait time (min)')\n",
-    "plt.ylabel('')\n",
-    "plt.title('MPG vs. Car Weight')\n",
+    "plt.ylabel('Frequency of Values')\n",
+    "plt.title('Wait ')\n",
     "\n",
     "plt.scatter(weight, mpg)\n",
     "\n",
