Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
     "plt.ylabel('Frequency of Values')\n",
     "plt.title('Wait Time Distribution')\n",
     "\n",
-    "plt.scatter(weight, mpg)\n",
+    "plt.hist(, mpg)\n",
     "\n",
     "plt.show()\n",
     "\n",
