Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -181,6 +181,7 @@
    "source": [
     "x = None\n",
     "\n",
+    "wait_data = []\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
     "plt.xlabel('Wait Time (min)')\n",
