Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
     "plt.ylabel('Frequency of Values')\n",
     "plt.title('Wait Time Distribution')\n",
     "\n",
-    "plt.hist(, mpg)\n",
+    "plt.hist(wait_da\n",
     "\n",
     "plt.show()\n",
     "\n",
